--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/ernestognw/itc-overflow.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ernesto, Pablo, Jorge, Mauricio",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ernestognw/itc-overflow/issues"
