--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "itc-overflow",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js --exec babel-node"
+    "dev": "concurrently -r \"yarn dev:server\" \"yarn dev:client\"",
+    "dev:client": "rescripts start",
+    "dev:server": "nodemon server --exec babel-node",
+    "build:client": "rescripts build"
   },
   "repository": {
     "type": "git",
@@ -16,17 +18,57 @@
   "bugs": {
     "url": "https://github.com/ernestognw/itc-overflow/issues"
   },
-  "homepage": "https://github.com/ernestognw/itc-overflow#readme",
+  "nodemonConfig": {
+    "ignore": [
+      "src/*"
+    ]
+  },
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
     "@babel/core": "^7.12.3",
     "@babel/node": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
+    "@rescripts/utilities": "^0.0.7",
+    "antd": "^4.8.2",
+    "axios": "^0.21.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
     "mongoose-unique-validator": "^2.0.3",
-    "nodemon": "^2.0.6"
+    "prop-types": "^15.7.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-query": "^2.26.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "react-topbar-progress-indicator": "^4.1.0",
+    "shortid": "^2.2.16",
+    "styled-components": "^5.2.1",
+    "urljoin": "^0.1.5"
+  },
+  "devDependencies": {
+    "@rescripts/cli": "^0.0.14",
+    "@rescripts/rescript-env": "^0.0.12",
+    "concurrently": "^5.3.0",
+    "css-loader": "^5.0.1",
+    "less": "^3.12.2",
+    "less-loader": "^7.1.0",
+    "nodemon": "^2.0.6",
+    "style-loader": "^2.0.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
