feature(linter): Add code linting

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "concurrently -r \"yarn dev:server\" \"yarn dev:client\"",
     "dev:client": "rescripts start",
     "dev:server": "nodemon server --exec babel-node",
-    "build:client": "rescripts build"
+    "build:client": "rescripts build",
+    "lint": "eslint",
+    "format": "prettier --write"
   },
   "repository": {
     "type": "git",
@@ -24,6 +26,7 @@
     ]
   },
   "dependencies": {
+    "@ant-design/colors": "^5.0.0",
     "@ant-design/icons": "^4.2.2",
     "@babel/core": "^7.12.3",
     "@babel/node": "^7.12.1",
@@ -54,9 +57,20 @@
     "@rescripts/rescript-env": "^0.0.12",
     "concurrently": "^5.3.0",
     "css-loader": "^5.0.1",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.14.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.21.5",
+    "husky": "^4.3.0",
     "less": "^3.12.2",
-    "less-loader": "^7.1.0",
+    "less-loader": "^7.0.2",
     "nodemon": "^2.0.6",
+    "prettier": "^2.1.2",
+    "pretty-quick": "^3.1.0",
     "style-loader": "^2.0.0"
   },
   "browserslist": {
@@ -70,5 +84,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn format . && git add . && pretty-quick --staged",
+      "pre-push": "yarn lint ."
+    }
   }
 }
