--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/node": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@rescripts/utilities": "^0.0.7",
+    "@styled-system/prop-types": "^5.1.5",
     "antd": "^4.8.2",
     "axios": "^0.21.0",
     "bcryptjs": "^2.4.3",
@@ -50,6 +51,7 @@
     "react-topbar-progress-indicator": "^4.1.0",
     "shortid": "^2.2.16",
     "styled-components": "^5.2.1",
+    "styled-system": "^5.1.5",
     "urljoin": "^0.1.5"
   },
   "devDependencies": {
